--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="50dp"/>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
+
+    <Button
+        android:id="@+id/btnadd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add photo"
+        android:layout_gravity="center"
+        android:textSize="25dp"/>
 
     <EditText
         android:id="@+id/txtname"
@@ -62,10 +70,10 @@
 
     <EditText
         android:id="@+id/txtprice"
-        android:layout_width="300dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Price/km"
+        android:hint="Rs/km (12/km-4s , 15/km-7s)"
         android:textSize="25dp"
         android:textColor="@color/black"/>
 
@@ -77,6 +85,7 @@
         android:textColor="#ffffff"
         android:textSize="25dp"
         android:layout_marginTop="20dp"/>
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
