--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:text="Add photo"
         android:layout_gravity="center"
+        android:textColor="#ffffff"
         android:textSize="25dp"/>
 
     <EditText
